# more-tech-data

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .flake8.ini  .mypy.ini  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/application/common/: container.py
backend/application/web/: routers.py
backend/config/: db.py  logging.py  middlewares.py  routers.py  settings.py
backend/migrations/: env.py
backend/src/app_name/: models.py  service.py  views.py
backend/src/core/: constants.py  exceptions.py  middleware.py
backend/src/news/: api.py  constants.py  schemas.py
backend/src/news/analyze/: dct_word_final.pickle  news_recommendation_model.py
backend/src/news/services/: glafbuh_parser.py  rb_parser.py
