[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Template for FastAPI microservice"
authors = ["Anton Ivanov"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
loguru = "^0.6.0"
pytest = "^7.1.2"
selenium = "^4.5.0"
bs4 = "^0.0.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
